[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/level/DEBUG.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=4]

[node name="DEBUG" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 1200.0
margin_bottom = 600.0
rect_min_size = Vector2( 1200, 600 )

[node name="Panel" type="Panel" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -61.0
margin_bottom = 89.0
rect_min_size = Vector2( 1200, 150 )
custom_styles/panel = SubResource( 4 )

[node name="Target" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 552.0
margin_right = -888.0
margin_bottom = 592.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Control/Target"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TARGET"

[node name="Cohesion" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 12.0
margin_top = 606.0
margin_right = -888.0
margin_bottom = 646.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Control/Cohesion"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "COHESION"

[node name="Alignment" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 332.0
margin_top = 549.0
margin_right = -568.0
margin_bottom = 589.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Control/Alignment"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Separation"

[node name="Separation" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 332.0
margin_top = 601.0
margin_right = -568.0
margin_bottom = 641.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
max_value = 1.0
step = 0.01

[node name="Label" type="Label" parent="Control/Separation"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Separation"

[node name="ViewDistance" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 712.0
margin_top = 553.0
margin_right = -188.0
margin_bottom = 593.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
min_value = 5.0
max_value = 300.0
step = 5.0
value = 20.0

[node name="Label" type="Label" parent="Control/ViewDistance"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "View"

[node name="AvoidDistance" type="HSlider" parent="Control"]
anchor_right = 1.0
margin_left = 707.0
margin_top = 595.0
margin_right = -193.0
margin_bottom = 635.0
rect_min_size = Vector2( 300, 40 )
focus_mode = 0
min_value = 5.0
max_value = 300.0
step = 5.0
value = 20.0

[node name="Label" type="Label" parent="Control/AvoidDistance"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Avoid"

[connection signal="value_changed" from="Control/Target" to="." method="_on_Target_value_changed"]
[connection signal="value_changed" from="Control/Cohesion" to="." method="_on_Cohesion_value_changed"]
[connection signal="value_changed" from="Control/Alignment" to="." method="_on_Alignment_value_changed"]
[connection signal="value_changed" from="Control/Separation" to="." method="_on_Separation_value_changed"]
[connection signal="value_changed" from="Control/ViewDistance" to="." method="_on_ViewDistance_value_changed"]
[connection signal="value_changed" from="Control/AvoidDistance" to="." method="_on_AvoidDistance_value_changed"]
